@@ -36,9 +36,19 @@ class RemoteBeanstreamTest < Test::Unit::TestCase
         :address1 => '4444 Levesque St.',
         :address2 => 'Apt B',
         :city => 'Montreal',
-        :state => 'QC',
+        :state => 'Quebec',
         :country => 'CA',
         :zip => 'H2C1X8'
+      },
+      :shipping_address => {
+        :name => 'shippy',
+        :phone => '888-888-8888',
+        :address1 => '777 Foster Street',
+        :address2 => 'Ste #100',
+        :city => 'Durham',
+        :state => 'North Carolina',
+        :country => 'US',
+        :zip => '27701'
       },
       :email => 'xiaobozzz@example.com',
       :subtotal => 800,
@@ -90,6 +100,27 @@ class RemoteBeanstreamTest < Test::Unit::TestCase
     assert response = @gateway.purchase(@amount, @declined_amex, @options)
     assert_failure response
     assert_equal 'DECLINE', response.message
+  end
+
+  def test_successful_purchase_with_state_in_iso_format
+    assert response = @gateway.purchase(@amount, @visa, @options.merge(billing_address: address, shipping_address: address))
+    assert_success response
+    assert_false response.authorization.blank?
+    assert_equal "Approved", response.message
+  end
+
+  def test_failed_purchase_due_to_invalid_billing_state
+    @options[:billing_address][:state] = "Quebecistan"
+    assert response = @gateway.purchase(@amount, @visa, @options)
+    assert_failure response
+    assert_match %r{province does not match country}, response.message
+  end
+
+  def test_failed_purchase_due_to_invalid_shipping_state
+    @options[:shipping_address][:state] = "North"
+    assert response = @gateway.purchase(@amount, @visa, @options)
+    assert_failure response
+    assert_match %r{Invalid shipping province}, response.message
   end
 
   def test_authorize_and_capture
