@@ -20,6 +20,7 @@
 * Checkout V2: Fix success_from not properly checking two possible success codes [davidsantoso]
 * SagePay: Support Repeat transactions [curiousepic] #2395
 * PayU LATAM: Fix incorrect capture method definition [davidsantoso]
+* Beanstream: Map ISO province codes for US and CA [shasum] #2396
 
 == Version 1.64.0 (March 6, 2017)
 * Authorize.net: Allow settings to be passed for CIM purchases [fwilkins] #2300
